Added sitemap to lynnux.xyz

--- a/akira/commands/index.html
+++ b/akira/commands/index.html
@@ -18,6 +18,15 @@
     <meta property="og:image" content="https://cdn.lynnux.xyz/images/AkiraAvatar.png">
     <meta property="og:image:secure_url" content="https://cdn.lynnux.xyz/images/AkiraAvatar.png">
     <meta name="theme-color" content="#f47fff">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YSD2Q72W1H"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YSD2Q72W1H');
+    </script>
 </head>
 
 <body>
