--- a/akira/todo/index.html
+++ b/akira/todo/index.html
@@ -25,9 +25,15 @@
 const _INITIALIZE_LOCATION_SEARCH_=location.search
     </script>
     <link href="/static/css/main.92c167b1.css" rel="stylesheet">
-    <Style>
-        
-    </Style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YSD2Q72W1H"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YSD2Q72W1H');
+    </script>
 </head>
     <body style="background-image: url(https://cdn.lynnux.xyz/images/Background.jpg); background-repeat: no-repeat; background-attachment: fixed;background-size: cover;">
         <noscript>You need to enable JavaScript to run this app.</noscript>
