--- a/akira/assets/images/index.html
+++ b/akira/assets/images/index.html
@@ -8,6 +8,15 @@
 
     <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
     <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YSD2Q72W1H"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YSD2Q72W1H');
+    </script>
 </head>
 
 <body>
