--- a/akira/permissions/index.html
+++ b/akira/permissions/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="./main.css">
     <script src="../assets/js/GTag.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YSD2Q72W1H"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YSD2Q72W1H');
+    </script>
 </head>
 
 <body style="margin: 0!important; color: #fff;">
