--- a/akira/policy.html
+++ b/akira/policy.html
@@ -18,6 +18,15 @@
     <meta name="theme-color" content="#f47fff">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <script src="./assets/js/GTag.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YSD2Q72W1H"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YSD2Q72W1H');
+    </script>
 </head>
 
 <body>
