--- a/akira/support/index.html
+++ b/akira/support/index.html
@@ -17,6 +17,15 @@
     <meta name="theme-color" content="#f47fff">
     <meta name="msapplication-TileColor" content="#f47fff">
     <meta content="#f47fff" data-react-helmet="true">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YSD2Q72W1H"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YSD2Q72W1H');
+    </script>
 </head>
 
 <body>
