--- a/sites/lynnux/404.html
+++ b/sites/lynnux/404.html
@@ -12,6 +12,15 @@
 
     <link rel="stylesheet" href="https://akira.lynnux.xyz/assets/css/styles.css">
     <link rel="shortcut icon" href="/assets/images/my-avatar.png">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YSD2Q72W1H"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YSD2Q72W1H');
+    </script>
 </head>
 
 <body>
