--- a/sites/lynnux/helper/discord/index.html
+++ b/sites/lynnux/helper/discord/index.html
@@ -16,6 +16,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true">
     <link href="document_files/css2.css?family=Catamaran:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
     <script defer="defer" src="document_files/main.2da15526.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YSD2Q72W1H"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YSD2Q72W1H');
+    </script>
 </head>
 
 <body><noscript>You need JavaScript enabled to use this website.</noscript>
