--- a/sites/lynnux/helper/webhook/mobile.html
+++ b/sites/lynnux/helper/webhook/mobile.html
@@ -84,7 +84,7 @@
     </div>
     <br><br>
     <br><br>
-    <center><a>Desktop version available </a><a href="../">here!</a>
+    <center><a>Desktop version available </a><a href="./">here!</a>
     </center>
 </body>
 
