--- a/sites/lynnux/helper/webhook/index.html
+++ b/sites/lynnux/helper/webhook/index.html
@@ -37,9 +37,9 @@
                         class="checkmark"></span></label>
             </div>
             <br><br>
-            <h3>Webhook</h3>
+            <h3>Webhook *</h3>
             <input class="input" id="url" type="text" name="link" placeholder="Webhook url">
-            <h3>Username</h3>
+            <h3>Username *</h3>
             <input class="input" id="name" type="text" name="Username (nick of hook)" placeholder="nickname of the webhook">
             <h3>Avatar</h3>
             <input class="input" id="avatar" type="text" name="Avatar of bot" placeholder="image for the webhook avatar">
@@ -64,7 +64,7 @@
             <h3>Author Link</h3>
             <input class="input" id="author_link" type="text" name="author URL" placeholder="author link">
             <h3>Sidebar Color</h3>
-            <input class="input" id="color" type="text" name="hex color" placeholder="#123456">
+            <input class="input" id="color" type="text" name="hex color" placeholder="#123456   | Must include #">
             <h3>Footer</h3>
             <input class="input" id="footer" type="text" name="footers" placeholder="embed footer">
             <h3>Footer icon</h3>
