--- a/sites/lynnux/helper/discord/index.html
+++ b/sites/lynnux/helper/discord/index.html
@@ -16,7 +16,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true">
     <link href="document_files/css2.css?family=Catamaran:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
     <script defer="defer" src="document_files/main.2da15526.js"></script>
-    <!-- Google tag (gtag.js) -->
+<!-- Discord Embed -->
+    <meta property="og:site_name" content="https://lynnux.xyz/helper/webhook/" />
+    <meta property="og:title" content="Lynnux - Discord Timestamp Generator" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="A website that can help you send timestamps to discord." />
+    <meta property="og:image" content="/assets/images/favicon.png">
+    <meta property="og:image:secure_url" content="https://lynnux.xyz/assets/images/favicon.png">
+    <meta name="p:domain_verify" content="8c72dddc235011ec65f54fc3e0fcc7ad"/>
+    <meta name="theme-color" content="#ff47ff">
+<!-- favicon -->
+    <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon"/>
+<!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YSD2Q72W1H"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
