--- a/sites/lynnux/404.html
+++ b/sites/lynnux/404.html
@@ -25,7 +25,7 @@
 
 <body>
     <div class="Notfound_container___vm_Q">
-        <img src="https://cdn.lynnux.xyz/svg/NotFound.svg" alt="not-found" class="Notfound_not-found-img__st0se">
+        <img src="https://cdn.lynnux.xyz/assets/svg/NotFound.svg" alt="not-found" class="Notfound_not-found-img__st0se">
         <h4 style="background-color: transparent;">
             The page you're looking for can't be found.
         </h4>
