--- a/sites/lynnux/helper/discord/timestamp.html
+++ b/sites/lynnux/helper/discord/timestamp.html
@@ -11,7 +11,7 @@
     <link href="document_files/css2.css?family=Catamaran:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
     <script defer="defer" src="document_files/main.2da15526.js"></script>
 <!-- Discord Embed -->
-    <meta property="og:site_name" content="https://lynnux.xyz/helper/webhook/" />
+    <meta property="og:site_name" content="https://lynnux.xyz/helper/discord/timestamp" />
     <meta property="og:title" content="Lynnux - Discord Timestamp Generator" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="A website that can help you send timestamps to discord." />
