--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -430,6 +430,42 @@
                   <p class="project-category">Web development</p>
                 </a>
               </li>
+              <li class="project-item active" data-filter-item data-category="web development">
+                <a href="./helper/discord/coloredtext/">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img src="https://cdn.lynnux.xyz/images/Helper-Discord_Colored_Text.png" alt="Discord ColoredText Generator" loading="lazy"/>
+                  </figure>
+                  <h3 class="project-title">Discord ColoredText Generator</h3>
+                  <p class="project-category">Web development</p>
+                </a>
+              </li>
+              <li class="project-item active" data-filter-item data-category="web development">
+                <a href="./helper/discord/timestamp/">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img src="https://cdn.lynnux.xyz/images/Helper-Discord_Timestamp.png" alt="Discord Timestamp Generator" loading="lazy"/>
+                  </figure>
+                  <h3 class="project-title">Discord Timestamp Generator</h3>
+                  <p class="project-category">Web development</p>
+                </a>
+              </li>
+              <li class="project-item active" data-filter-item data-category="web development">
+                <a href="./helper/discord/webhook/">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img src="https://cdn.lynnux.xyz/images/Helper-Discord_webhook.png" alt="Discord Webhook Sender" loading="lazy"/>
+                  </figure>
+                  <h3 class="project-title">Discord Webhook Sender</h3>
+                  <p class="project-category">Web development</p>
+                </a>
+              </li>
             </ul>
           </section>
         </article>
