--- a/sites/lynnux/helper/discord/index.html
+++ b/sites/lynnux/helper/discord/index.html
@@ -21,7 +21,7 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="https://lynnux.xyz/assets/images/favicon" type="image/x-icon"/>
     <!-- custom css link -->
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
