--- a/sites/lynnux/helper/discord/webhook/index.html
+++ b/sites/lynnux/helper/discord/webhook/index.html
@@ -27,7 +27,7 @@
         </script>
     </head>
 
-    <body bgcolor="#23272A" id="body">
+    <body bgcolor="#36393F" id="body">
         <div class="left" id="left_side">
             <strong class="head">Discord Webhook Sender</strong>
             <br>
